syntax = "proto3";

package api.sigma.v1;

import "google/api/annotations.proto";

option go_package = "kratos_study/api/sigma/v1;v1"; // 包名
option java_multiple_files = true;
option java_package = "api.sigma.v1";

service WechatUser {
    rpc CreateWechatUser(CreateWechatUserRequest) returns (CreateWechatUserReply) {
        option (google.api.http) = {
            post: "/api/user"
            body: "creat_body"
        };
    }
    // rpc UpdateWechatUser(UpdateWechatUserRequest) returns (UpdateWechatUserReply);
    rpc GetWechatUser(GetWechatUserRequest) returns (GetWechatUserReply) {
        option (google.api.http) = {
            get: "/api/user/{id}"
        };
    }
    rpc ListWechatUser(ListWechatUserRequest) returns (ListWechatUserReply) {
        option (google.api.http) = {
            get: "/api/user"
        };
    }
}

message CreateWechatUserRequest {
    message CreatBody {
        string openid = 1;
        string nickname = 2;
        string unionid = 3;
        string appid = 4;
    }
    CreatBody creat_body = 1;
}
message CreateWechatUserReply {
    int32 code = 1;
    string message = 2;
    string data = 3;
}

//message UpdateWechatUserRequest {}
//message UpdateWechatUserReply {}



message GetWechatUserRequest {
    uint64 id = 1;
}
message GetWechatUserReply {
    int32 code = 1;
    string message = 2;
    string data = 3;
}

message ListWechatUserRequest {

}
message ListWechatUserReply {
    int32 code = 1;
    string message = 2;
    string data = 3;
}